# lockhorn

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
src/components/: process.py  schema.py
src/components/input/: lockhorn-0.2.0-py3-none-any.whl  meltano.ipynb  schema.ipynb
src/components/processing/: lockhorn-0.2.0-py3-none-any.whl  process.ipynb
src/lockhorn/process/: __init__.py  process.py
src/lockhorn/schema/: builder.py
src/pipelines/: e2e.pipeline
src/pipelines/.ipynb_checkpoints/: e2e-checkpoint.pipeline
tests/: test_lockhorn.py
