[tool.poetry]
name = "lockhorn"
version = "0.2.0"
description = ""
authors = ["Abhishek Kumar <abhkumar10@publicisgroupe.net>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
pre-commit = "^2.16.0"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
